Fix dark mode

--- a/app/assets/styles/base/_colors.scss
+++ b/app/assets/styles/base/_colors.scss
@@ -8,10 +8,10 @@
     --color-secondary-r: 219;
     --color-secondary-g: 226;
     --color-secondary-b: 239;
-    --color-tertiary: #c5d3e8;
-    --color-tertiary-r: 197;
-    --color-tertiary-g: 211;
-    --color-tertiary-b: 232;
+    --color-tertiary: #b8ccec;
+    --color-tertiary-r: 184;
+    --color-tertiary-g: 204;
+    --color-tertiary-b: 236;
     --color-text: #112D4E;
     --color-text-r: 17;
     --color-text-g: 45;
@@ -20,20 +20,20 @@
 
 /* Light theme overrides */
 .theme-dark {
-    --color-primary: #070F2B;
-    --color-primary-r: 228;
-    --color-primary-g: 229;
-    --color-primary-b: 241;
-    --color-secondary: #2e2d7a;
-    --color-secondary-r: 210;
-    --color-secondary-g: 211;
-    --color-secondary-b: 219;
-    --color-tertiary: #535C91;
-    --color-tertiary-r: 147;
-    --color-tertiary-g: 148;
-    --color-tertiary-b: 165;
+    --color-primary: #201d1e;
+    --color-primary-r: 32;
+    --color-primary-g: 29;
+    --color-primary-b: 30;
+    --color-secondary: #353233;
+    --color-secondary-r: 53;
+    --color-secondary-g: 50;
+    --color-secondary-b: 51;
+    --color-tertiary: #4b4849;
+    --color-tertiary-r: 75;
+    --color-tertiary-g: 72;
+    --color-tertiary-b: 73;
     --color-text: #EEEEEE;
-    --color-text-r: 28;
-    --color-text-g: 38;
-    --color-text-b: 60;
+    --color-text-r: 238;
+    --color-text-g: 238;
+    --color-text-b: 238;
 }
